@@ -34,14 +34,14 @@ void welcome_screen (hashcat_ctx_t *hashcat_ctx, const char *version_tag)
 
   if (user_options->usage == true)
   {
-    event_log_info (hashcat_ctx, "%s (%s) starting in help mode...", PROGNAME, version_tag);
+    event_log_info (hashcat_ctx, "%s (%s) starting in help mode", PROGNAME, version_tag);
     event_log_info (hashcat_ctx, NULL);
   }
   else if (user_options->benchmark == true)
   {
     if (user_options->machine_readable == false)
     {
-      event_log_info (hashcat_ctx, "%s (%s) starting in benchmark mode...", PROGNAME, version_tag);
+      event_log_info (hashcat_ctx, "%s (%s) starting in benchmark mode", PROGNAME, version_tag);
 
       event_log_info (hashcat_ctx, NULL);
 
@@ -61,37 +61,37 @@ void welcome_screen (hashcat_ctx_t *hashcat_ctx, const char *version_tag)
   }
   else if (user_options->restore == true)
   {
-    event_log_info (hashcat_ctx, "%s (%s) starting in restore mode...", PROGNAME, version_tag);
+    event_log_info (hashcat_ctx, "%s (%s) starting in restore mode", PROGNAME, version_tag);
     event_log_info (hashcat_ctx, NULL);
   }
   else if (user_options->speed_only == true)
   {
-    event_log_info (hashcat_ctx, "%s (%s) starting in speed-only mode...", PROGNAME, version_tag);
+    event_log_info (hashcat_ctx, "%s (%s) starting in speed-only mode", PROGNAME, version_tag);
     event_log_info (hashcat_ctx, NULL);
   }
   else if (user_options->progress_only == true)
   {
-    event_log_info (hashcat_ctx, "%s (%s) starting in progress-only mode...", PROGNAME, version_tag);
+    event_log_info (hashcat_ctx, "%s (%s) starting in progress-only mode", PROGNAME, version_tag);
     event_log_info (hashcat_ctx, NULL);
   }
   else if (user_options->backend_info == true)
   {
-    event_log_info (hashcat_ctx, "%s (%s) starting in backend information mode...", PROGNAME, version_tag);
+    event_log_info (hashcat_ctx, "%s (%s) starting in backend information mode", PROGNAME, version_tag);
     event_log_info (hashcat_ctx, NULL);
   }
   else if (user_options->hash_mode_chgd == false)
   {
-    event_log_info (hashcat_ctx, "%s (%s) starting in autodetect mode...", PROGNAME, version_tag);
+    event_log_info (hashcat_ctx, "%s (%s) starting in autodetect mode", PROGNAME, version_tag);
     event_log_info (hashcat_ctx, NULL);
   }
   else if (user_options->hash_info == true)
   {
-    event_log_info (hashcat_ctx, "%s (%s) starting in hash-info mode...", PROGNAME, version_tag);
+    event_log_info (hashcat_ctx, "%s (%s) starting in hash-info mode", PROGNAME, version_tag);
     event_log_info (hashcat_ctx, NULL);
   }
   else
   {
-    event_log_info (hashcat_ctx, "%s (%s) starting...", PROGNAME, version_tag);
+    event_log_info (hashcat_ctx, "%s (%s) starting", PROGNAME, version_tag);
     event_log_info (hashcat_ctx, NULL);
   }
 
