@@ -13,7 +13,9 @@
 ##
 
 - Fixed 'E' rule in pure kernel mode which was ignoring letters that are in positions that are multiples of 4
+- Fixed access violation in hashconfig_destroy if hashcat_ctx_t is only partially initialized
 - Fixed false negative in hash-mode 15900 (DPAPI masterkey file v2) if password was longer than 64 characters
+- Fixed hashcat_ctx leak and refactor module and kernel existence checks
 - Fixed integer overflow in Recovered/Time status view column caused by division > 0 but < 1
 
 ##
